syntax = "proto3";

option csharp_namespace = "Discount.Grpc.Protos";

service Discount {
	rpc GetById (DiscountById) returns (CouponModel);
	rpc GetByProductId (DiscountByProductId) returns (CouponModel);

	rpc GetManyDiscountsById (ManyDiscountById) returns (ManyDiscountModel);
	rpc GetManyDiscountsByProductId (ManyDiscountByProductId) returns (ManyDiscountModel);
	
	rpc Create (CouponModel) returns (ObjectResult);
	rpc Update (CouponModel) returns (ObjectResult);
	rpc DeleteById (DiscountById) returns (ObjectResult);
	rpc DeleteProductId (DiscountByProductId) returns (ObjectResult);
}

message DiscountById {
	int32 id = 1;
}
message ManyDiscountById {
	repeated int32 ids = 1;
}

message DiscountByProductId {
	string productId = 1;
}
message ManyDiscountByProductId {
	repeated string productIds = 1;
}

message ObjectResult {
	bool success = 1;
}

message CouponModel {
	int32 id = 1;
	string productId = 2;
	string productName = 3;
    string description = 4;
    float amount = 5;
}
message ManyDiscountModel {
	repeated float amounts = 1;
}